# OnidataApi

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: Endpoints.md  MakefileDocs.md  OnidataApi.postman_collection.json
src/apps/loans/: models.py
src/apps/loans/api/v1/: __init__.py  repositories.py  serializers.py  services.py  views.py
src/apps/payments/: admin.py  models.py
src/apps/payments/api/v1/: __init__.py  repositories.py  serializers.py  services.py  views.py
src/apps/payments/migrations/: 0001_initial.py  0002_payment_installment_number.py
src/onidata/: settings.py  urls.py
tests/: __init__.py  _factories.py  _utils.py  conftest.py  settings.py
tests/apps/: tests_admin.py  tests_token.py
tests/apps/loans/api/: tests_api.py  tests_repositories.py  tests_services.py
tests/apps/payments/api/: tests_api.py  tests_repositories.py  tests_services.py
